--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^1.9.1"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
