--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-preset-stage-0": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sourcemaps": "^1.9.1"
   },
   "dependencies": {
