--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "gulp-sourcemaps": "^1.9.1"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "log4js": "^1.0.1"
   }
 }
