--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2017": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.18.0",
+    "core-decorators": "^0.15.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
@@ -25,6 +34,10 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "log4js": "^1.0.1"
+    "fs-plus": "^2.9.3",
+    "lodash": "^4.17.2",
+    "log4js": "^1.0.1",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.27.0"
   }
 }
