--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.2",
     "log4js": "^1.0.1",
     "mysql": "^2.12.0",
+    "redis": "^2.6.3",
     "sequelize": "^3.27.0"
   }
 }
